src-ken&y/objects/Report_Item__c.object
<CustomObject>
    <customHelpPage>Help_Financial_Reports</customHelpPage>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Async_Report_Completion_Time__c</fullName>
        <label>Async Report Completion Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Async_Report_Error__c</fullName>
        <label>Async Report Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Async_Report_Instance_Id__c</fullName>
        <label>Async Report Instance Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Async_Report_Requested_Time__c</fullName>
        <label>Async Report Requested Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Async_Report_Status__c</fullName>
        <label>Async Report Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asynchronous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Analytics API can handle a higher number of asynchronous run requests at a time.</description>
        <inlineHelpText>Select to generate the report in a background process. When you run a report asynchronously, a message displays informing you that the report will be ready to view at a later point in time. Recommended for large reports.</inlineHelpText>
        <label>Asynchronous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cash_Flow_Report_Item_Type__c</fullName>
        <label>Cash Flow Report Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Previous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Column_Total_Label__c</fullName>
        <description>The text to be displayed as column totals row label</description>
        <label>Column Total Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <formula>Financial_Report_Section__r.Financial_Report__r.Company__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Field__c</fullName>
        <description>Object API name and field API name to apply the date range filter to</description>
        <label>Date Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Column_Labels__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Display or hide column headers on this Report</description>
        <label>Display Column Labels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Column_Totals__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, the column totals will be shown. Only used for matrix reports.</description>
        <label>Display Column Totals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checked if the name should appear in the report output</description>
        <label>Display Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Total__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, the totals from the report will be shown. For matrix reports, this checkbox controls the row totals.</description>
        <label>Display Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Ending date to filter the report on</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Filter_10__c</fullName>
        <label>Filter 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_11__c</fullName>
        <label>Filter 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_12__c</fullName>
        <label>Filter 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Column_Value__c</fullName>
        <description>Value by which the column is to be filtered</description>
        <label>Filter Column Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Column__c</fullName>
        <description>Column on which Filter is to be applied</description>
        <label>Filter Column</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Operator_10__c</fullName>
        <label>Filter Operator 10</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>notEqual</fullName>
                </value>
                <value>
                    <fullName>lessThan</fullName>
                </value>
                <value>
                    <fullName>greaterThan</fullName>
                </value>
                <value>
                    <fullName>lessOrEqual</fullName>
                </value>
                <value>
                    <fullName>greaterOrEqual</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>notContain</fullName>
                </value>
                <value>
                    <fullName>startsWith</fullName>
                </value>
                <value>
                    <fullName>includes</fullName>
                </value>
                <value>
                    <fullName>excludes</fullName>
                </value>
                <value>
                    <fullName>within</fullName>
                </value>
                <value>
                    <fullName>between</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Filter_Operator_11__c</fullName>
        <label>Filter Operator 11</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>notEqual</fullName>
                </value>
                <value>
                    <fullName>lessThan</fullName>
                </value>
                <value>
                    <fullName>greaterThan</fullName>
                </value>
                <value>
                    <fullName>lessOrEqual</fullName>
                </value>
                <value>
                    <fullName>greaterOrEqual</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>notContain</fullName>
                </value>
                <value>
                    <fullName>startsWith</fullName>
                </value>
                <value>
                    <fullName>includes</fullName>
                </value>
                <value>
                    <fullName>excludes</fullName>
                </value>
                <value>
                    <fullName>within</fullName>
                </value>
                <value>
                    <fullName>between</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Filter_Operator_12__c</fullName>
        <label>Filter Operator 12</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>notEqual</fullName>
                </value>
                <value>
                    <fullName>lessThan</fullName>
                </value>
                <value>
                    <fullName>greaterThan</fullName>
                </value>
                <value>
                    <fullName>lessOrEqual</fullName>
                </value>
                <value>
                    <fullName>greaterOrEqual</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>notContain</fullName>
                </value>
                <value>
                    <fullName>startsWith</fullName>
                </value>
                <value>
                    <fullName>includes</fullName>
                </value>
                <value>
                    <fullName>excludes</fullName>
                </value>
                <value>
                    <fullName>within</fullName>
                </value>
                <value>
                    <fullName>between</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Filter_Operator__c</fullName>
        <description>The operator for the Filter value</description>
        <label>Filter Operator</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Value_10__c</fullName>
        <label>Filter Value 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Value_11__c</fullName>
        <label>Filter Value 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Value_12__c</fullName>
        <label>Filter Value 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Report_Section__c</fullName>
        <label>Financial Report Section</label>
        <referenceTo>Financial_Report_Section__c</referenceTo>
        <relationshipLabel>Report Items</relationshipLabel>
        <relationshipName>Report_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Item_Label__c</fullName>
        <label>Item Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>currently not used</description>
        <label>Key</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Numeric_Scale__c</fullName>
        <formula>Financial_Report_Section__r.Numeric_Scale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of decimal places to show in the report/section/item.</inlineHelpText>
        <label>Numeric Scale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>order to display this report item by within the report section</description>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period_End_Date__c</fullName>
        <formula>TEXT(MONTH(DATEVALUE(Financial_Report_Section__r.Financial_Report__r.Period__r.Period_End__c)))+&quot;/&quot; +TEXT(DAY(DATEVALUE(Financial_Report_Section__r.Financial_Report__r.Period__r.Period_End__c)))+&quot;/&quot; +TEXT(YEAR(DATEVALUE(Financial_Report_Section__r.Financial_Report__r.Period__r.Period_End__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period End Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_Name__c</fullName>
        <formula>Financial_Report_Section__r.Period_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_Start_Date__c</fullName>
        <formula>TEXT(MONTH(DATEVALUE(Financial_Report_Section__r.Financial_Report__r.Period__r.Period_Start__c)))+&quot;/&quot; +TEXT(DAY(DATEVALUE(Financial_Report_Section__r.Financial_Report__r.Period__r.Period_Start__c)))+&quot;/&quot; +TEXT(YEAR(DATEVALUE(Financial_Report_Section__r.Financial_Report__r.Period__r.Period_Start__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period Start Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Real_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Get report data in real time, instead of cached</description>
        <inlineHelpText>Get report data in real time, instead of cached</inlineHelpText>
        <label>Real Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Chunk_Status__c</fullName>
        <label>Report Chunk Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Id__c</fullName>
        <inlineHelpText>Enter the Report ID for the report to which you want to link this item.</inlineHelpText>
        <label>Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Key__c</fullName>
        <description>This value is used to group report items into the same table</description>
        <label>Report Key</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Link__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;&amp; Report_Id__c , &apos;Run Report&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <formula>Financial_Report_Section__r.Financial_Report__r.Name</formula>
        <label>Report Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_URL__c</fullName>
        <formula>&quot;/services/data/v29.0/analytics/reports/&quot;&amp; Report_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <description>use with Tabular reports, shows rows of data</description>
        <inlineHelpText>Select to show rows of data in tabular reports.</inlineHelpText>
        <label>Show Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start date for the report to filter on</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Label__c</fullName>
        <defaultValue>&quot;Total&quot;</defaultValue>
        <description>The text to appear in the Total line of this report</description>
        <label>Total Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_On_Top__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Total On Top</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Records_Count__c</fullName>
        <label>Total Records Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trial_Balance_Report_Item_Type__c</fullName>
        <label>Trial Balance Report Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beginning</fullName>
                </value>
                <value>
                    <fullName>Normal Period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Report Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Financial_Report_Section__c</columns>
        <columns>Order__c</columns>
        <columns>Total_Label__c</columns>
        <columns>Asynchronous__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Display_Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>